scrum-12: updated processed messages